<?xml version="1.0" encoding="utf-8"?>
<!--
    This XML layout defines the UI for the main screen of the application.
    It consists of a ScrollView containing a ConstraintLayout with various UI elements.
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <!--
        ConstraintLayout used as the root layout for better positioning of UI elements.
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout"
        >

        <!--
            TextView displaying the application name.
        -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/app_name"
            android:text="@string/app_name"
            android:textSize="@dimen/_30sdp"
            android:textColor="@color/black"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/lato_semi_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/app_icon"/>

        <!--
            TextView displaying the application description.
        -->
        <TextView
            android:id="@+id/app_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/app_desc"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toStartOf="@+id/app_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            tools:ignore="TextSizeCheck" />

        <!--
            ImageView displaying the application icon.
        -->
        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:id="@+id/app_icon"
            android:contentDescription="@string/app_icon_cont_desc"
            android:src="@drawable/statellus_app_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/app_name"/>

        <!--
            First row of cards containing statistics related information.
        -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_140sdp"
            android:id="@+id/row_1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_icon">

            <!--
                CardView for displaying statistics related information.
            -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/stats_card"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp">

                <!--
                    RelativeLayout wrapping the contents of the card.
                -->


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--
                        TextView displaying the title for statistics.
                    -->
                    <TextView
                        android:id="@+id/statisticsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/statistics_image"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/lato_semi_bold"
                        android:text="@string/statistics_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        tools:ignore="TextSizeCheck" />

                    <!--
                        ImageView displaying the statistics image.
                    -->
                    <ImageView
                        android:id="@+id/statistics_image"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_55sdp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:contentDescription="@string/statistics_image_cont_desc"
                        android:src="@drawable/statistics_dashboard_icon" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <!--
                CardView for displaying probability related information.
            -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:id="@+id/probability_card"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp">

                <!--
                    RelativeLayout wrapping the contents of the card.
                -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--
                        TextView displaying the title for probability.
                    -->
                    <TextView
                        android:id="@+id/probability_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/probability_icon"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/lato_semi_bold"
                        android:text="@string/probability_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        tools:ignore="TextSizeCheck" />

                    <!--
                        ImageView displaying the probability image.
                    -->
                    <ImageView
                        android:id="@+id/probability_icon"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_55sdp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:contentDescription="@string/probability_image_cont_desc"
                        android:src="@drawable/probability_dashboard_icon" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!--
            Second row of cards containing discrete math and data visualization information.
        -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_140sdp"
            android:id="@+id/row_2"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row_1">

            <!--
                CardView for displaying discrete math related information.
            -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/discrete_math_card"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp">

                <!--
                    RelativeLayout wrapping the contents of the card.
                -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--
                        TextView displaying the title for discrete math.
                    -->
                    <TextView
                        android:id="@+id/discrete_math_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/discrete_math_icon"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/lato_semi_bold"
                        android:text="@string/discrete_math_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        tools:ignore="TextSizeCheck" />

                    <!--
                        ImageView displaying the discrete math image.
                    -->
                    <ImageView
                        android:layout_width="@dimen/_75sdp"
                        android:layout_height="@dimen/_55sdp"
                        android:id="@+id/discrete_math_icon"
                        android:src="@drawable/discrete_math_icon"
                        android:contentDescription="@string/discrete_math_image_cont_desc"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!--
                CardView for displaying data visualization related information.
            -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/visualize_data_card"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp">

                <!--
                    RelativeLayout wrapping the contents of the card.
                -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--
                        TextView displaying the title for data visualization.
                    -->
                    <TextView
                        android:id="@+id/visualize_data_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/visualize_data_icon"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/lato_semi_bold"
                        android:text="@string/visualize_data_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        tools:ignore="TextSizeCheck" />

                    <!--
                        ImageView displaying the data visualization image.
                    -->
                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_55sdp"
                        android:id="@+id/visualize_data_icon"
                        android:src="@drawable/visualize_data_icon"
                        android:contentDescription="@string/visualize_data_image_cont_desc"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!--
            Third row of cards containing calculus and graphing information.
        -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_140sdp"
            android:id="@+id/row_3"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row_2">

            <!--
                CardView for displaying calculus related information.
            -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:id="@+id/calculus_card"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp">

                <!--
                    RelativeLayout wrapping the contents of the card.
                -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--
                        TextView displaying the title for calculus.
                    -->
                    <TextView
                        android:id="@+id/calculus_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/calculus_icon"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/lato_semi_bold"
                        android:text="@string/calculus_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        tools:ignore="TextSizeCheck" />

                    <!--
                        ImageView displaying the calculus image.
                    -->
                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_55sdp"
                        android:id="@+id/calculus_icon"
                        android:src="@drawable/calculus_dashboard_icon"
                        android:contentDescription="@string/calculus_image_cont_desc"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <!--
                CardView for displaying graphing related information.
            -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="20dp"
                android:id="@+id/graphing_card">

                <!--
                    RelativeLayout wrapping the contents of the card.
                -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <!--
                        TextView displaying the title for graphing.
                    -->
                    <TextView
                        android:id="@+id/graphing_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/graphingImage"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/lato_semi_bold"
                        android:text="@string/graphing_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp"
                        tools:ignore="TextSizeCheck" />

                    <!--
                        ImageView displaying the graphing image.
                    -->
                    <ImageView
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_55sdp"
                        android:id="@+id/graphingImage"
                        android:src="@drawable/graphing_dashboard_icon"
                        android:contentDescription="@string/graphing_image_cont_desc"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
